--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title><%= title %></title>
-    <%= csrf_meta_tag %>
+        <%= csrf_meta_tag %>
+        <%= stylesheet_link_tag "blueprint/screen", :media => 'screen' %>
+        <%= stylesheet_link_tag "blueprint/print", :media => 'screen' %>
     </head>
     <body>
-    <%= yield %>
+        <%= yield %>
     </body>
 </html>
